<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/mainMenuSyncAction"
            android:icon="@drawable/sync"
            android:title="@string/sync"
            app:showAsAction="ifRoom" />

    <!--  necessary to display icon in menu-->
    <item
            android:id="@+id/overflow"
            android:icon="@drawable/overflow"
            android:orderInCategory="201"
            android:title="@string/overflow"
            app:showAsAction="always">

        <menu>
            <item
                    android:id="@+id/mainMenuPreferencesAction"
                    android:icon="@drawable/preferences"
                    android:title="@string/preferences"
                    app:showAsAction="never" />
            <item
                    android:id="@+id/mainMenuImportAction"
                    android:icon="@drawable/import_icon"
                    android:title="@string/importTitle"
                    app:showAsAction="never" />
            <item
                    android:id="@+id/mainMenuExportAction"
                    android:icon="@drawable/export_icon"
                    android:title="@string/exportTitle"
                    app:showAsAction="never" />
            <item
                    android:id="@+id/mainMenuLoggingAction"
                    android:icon="@drawable/logging"
                    android:title="@string/logging"
                    app:showAsAction="never"/>
        </menu>
    </item>
</menu>
